<resources>
    <string name="app_name">ChallengeChapter4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_up">Sign Up</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="hello">Halo</string>
    <string name="name">nama</string>
    <string name="input">Input</string>
    <string name="add_note">Tambahkan Note</string>
    <string name="delete_note">Hapus Note ?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you’ve been missed!</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account_so_you_can_save_your_notes">Create an account so you can save your notes</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="challenge4_">Challenge4 by Andi Sadri Agung</string>
    <string name="selamat_dat">Selamat Datang di OurNotes!</string>
    <string name="mulailah_me">Mulailah mencatat ide dan inspirasi Anda dengan mudah</string>
    <string name="silahkan_lo">Silahkan Login Terlebih Dahulu</string>
    <string name="email">Email</string>
    <string name="masukkan_em">Masukkan Email Anda...</string>
    <string name="password">Password</string>
    <string name="masukkan_pa">Masukkan Password Anda...</string>
    <string name="login">Login</string>
    <string name="belum_punya">Belum punya akun? Daftar di sini</string>
    <string name="silahkan_da">Silahkan Daftar Akun Terlebih Dahulu</string>
    <string name="username">Username</string>
    <string name="masukkan_us">Masukkan Username....</string>
    <string name="register">Register</string>
    <string name="daftar">Daftar Sekarang</string>
    <string name="konfirmasi">Konfirmasi Password</string>
    <string name="konfirmasi_">Konfirmasi Password Anda...</string>
    <string name="sudah_punya_log">Sudah punya akun? Login di sini</string>
    <string name="welcome_user">Selamat Datang, user!</string>
    <string name="logout">Keluar</string>
    <string name="daftar_cata">Daftar Catatan Anda</string>
</resources>