<?xml version="1.0" encoding="utf-8"?>
<!--
    File XML ini digunakan untuk mendefinisikan tata letak (layout) fragment yang digunakan untuk menambah catatan baru.
    Tata letak ini berisi elemen-elemen seperti judul, deskripsi, dan tombol untuk menambahkan catatan.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- TextView untuk judul "Add Note" -->
    <TextView
        android:id="@+id/tv_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- EditText untuk input judul catatan -->
    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/title"
        android:fontFamily="@font/montserrat_medium"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_note" />

    <!-- EditText untuk input deskripsi catatan -->
    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/description"
        android:fontFamily="@font/montserrat_medium"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="@id/et_title"
        app:layout_constraintStart_toStartOf="@id/et_title"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <!-- Tombol untuk menambahkan catatan -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_input"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/primaryColor"
        android:text="@string/input"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
