<?xml version="1.0" encoding="utf-8"?>
<!-- Ini adalah berkas layout untuk tampilan LoginFragment -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.LoginFragment">

    <!-- Data binding untuk menghubungkan dengan ViewModel -->
    <data>
        <variable
            name="myLoginViewModel"
            type="rizkyfadilah.binar.synrgy6.android.challengechapter4.viewmodel.login_vm.LoginViewModel" />
    </data>

    <!-- Tampilan utama -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <!-- Logo Aplikasi -->
        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="94dp"
            android:layout_height="105dp"
            android:layout_marginTop="68dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Selamat Datang -->
        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/selamat_dat"
            android:textAppearance="@style/selamat_dat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

        <!-- Mulailah -->
        <TextView
            android:id="@+id/tv_note_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/mulailah_me"
            android:textAppearance="@style/mulailah_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <!-- Silahkan Login -->
        <TextView
            android:id="@+id/tv_note_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/silahkan_lo"
            android:textAppearance="@style/silahkan_lo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_note_welcome" />

        <!-- Label Email -->
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/email"
            android:textAppearance="@style/silahkan_lo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_note_login" />

        <!-- Input Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="330dp"
            android:layout_height="44dp"
            android:textSize="10sp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,SmallSp"
            tools:layout_editor_absoluteY="334dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/masukkan_em"
                android:inputType="textEmailAddress"
                android:text="@={myLoginViewModel.email}"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Label Password -->
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/password"
            android:textAppearance="@style/silahkan_lo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:ignore="MissingConstraints" />

        <!-- Input Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="330dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/masukkan_pa"
                android:inputType="textPassword"
                android:textSize="10sp"
                android:text="@={myLoginViewModel.inputPassword}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tombol Login -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="197dp"
            android:layout_height="38dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/montserrat_semibold"
            android:onClick="@{() -> myLoginViewModel.loginButton()}"
            android:shadowDx="0"
            android:shadowDy="10"
            android:shadowRadius="20"
            android:text="@string/login"
            android:textAppearance="@style/login"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <!-- Teks "Belum Punya Akun?" -->
        <TextView
            android:id="@+id/tv_signhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:onClick="@{() -> myLoginViewModel.signUP()}"
            android:text="@string/belum_punya"
            android:textAppearance="@style/belum_punya"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <!-- Teks "Challenge4" -->
        <TextView
            android:id="@+id/tv_challenge4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/challenge4_"
            android:textAppearance="@style/challenge4_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signhere"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
