<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="12dp"
    tools:context=".fragment.NotesFragment">

    <!-- Logo Aplikasi -->
    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tombol Logout -->
    <Button
        android:id="@+id/tv_logout"
        android:layout_width="85dp"
        android:layout_height="36dp"
        android:background="#FF0000"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/logout"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="5dp"
        tools:ignore="MissingConstraints" />

    <!-- Selamat Datang User -->
    <TextView
        android:id="@+id/tv_welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcome_user"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ic_logo"
        app:layout_constraintEnd_toStartOf="@+id/tv_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic_logo"
        app:layout_constraintVertical_bias="0.352" />

    <!-- Label "Daftar Catatan" -->
    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/daftar_cata"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_user" />

    <!-- RecyclerView untuk Menampilkan Catatan -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_hello"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_notes" />

    <!-- Tombol Floating untuk Menambah Catatan Baru -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:src="@drawable/__icon__plus_circle_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
